change json file for js file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/cards.css">
   <link rel="stylesheet" href="/css/style.css">
+  <script src="/data/Essential_Grammar_in_Use.js"></script>
   <script src="/scripts/toogle-button.js"></script>
   <script src="/scripts/card.js"></script>
   <script src="/scripts/script.js" defer></script>
