--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/cards.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="/data/Essential_Grammar_in_Use.js"></script>
-  <script src="/scripts/toogle-button.js"></script>
-  <script src="/scripts/card.js"></script>
-  <script src="/scripts/script.js" defer></script>
+  <link rel="stylesheet" href="css/cards.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="data/Essential_Grammar_in_Use.js"></script>
+  <script src="scripts/toogle-button.js"></script>
+  <script src="scripts/card.js"></script>
+  <script src="scripts/script.js" defer></script>
   <title>Select Title</title>
 </head>
 
