--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <a href="/" class="go-home">Go Home</a>
+    <a href="./" class="go-home">Go Home</a>
     <h1 id="main-title">welcome to card study</h1>
   </header>
   <div class="explain" id="explain"></div>
