Se modificó el codigo del evento de cambio de idioma

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <script src="data/Essential_Grammar_in_Use.js"></script>
   <script src="scripts/card.js"></script>
   <script src="scripts/script.js" defer></script>
-  <title>Select Title</title>
+  <title>Card Study</title>
 </head>
 
 <body>
   <header>
-    <h1 id="main-title">welcome to card study</h1>
+    <h1 id="main-title">Welcome to card study</h1>
     <a href="./" class="go-home">Go Home</a>
   </header>
   <div class="explain" id="explain"></div>
