Se modificó el css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <body>
   <header>
-    <h1 id="main-title">Welcome to card study</h1>
-    <a href="./" class="go-home">Go Home</a>
+      <h1 id="main-title">Welcome to card study</h1>
+      <a href="./" class="go-home">Go Home</a>
   </header>
+  
   <div class="explain" id="explain"></div>
   <div class="input" id="linkList"></div>
   <card-study class="card-study" id="card-study"></card-study>
@@ -27,8 +28,8 @@
       <span class="close" id="closeModal">&times;</span>
     </div>
     
-    <img class="modal-content" id="modalImage" />
-  </div> -->
+    <img class="modal-content" id="modalImage" /> -->
+  </div>
 </body>
 </body>
 
